Added Git ignore

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -3,3 +3,5 @@ source = ./keybindings.conf # Keyboard shortcuts
 source = ./window.conf # Window rules
 source = ./monitors.conf # Monitor configuration
 source = ./userprefs.conf # Your User Controls
+
+source = ./env/nvidia.conf # Nvidia Variables
