--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,7 +1,13 @@
 
+source = ./startupapps.conf # Default Apps
+source = ./defaultapps.conf # Default Apps
+
 source = ./keybindings.conf # Keyboard shortcuts
-source = ./window.conf # Window rules
 source = ./monitors.conf # Monitor configuration
+source = ./personalization.conf # For Personalization
+
 source = ./userprefs.conf # Your User Controls
+source = ./window.conf # Window rules
+source = ./env.conf # For Environment Variables
 
 source = ./env/nvidia.conf # Nvidia Variables
