--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,13 +1,13 @@
 
-source = ./startupapps.conf # Default Apps
-source = ./defaultapps.conf # Default Apps
+source = ./StartupApps.conf # Default Apps
+source = ./DefaultApps.conf # Default Apps
 
-source = ./keybindings.conf # Keyboard shortcuts
-source = ./monitors.conf # Monitor configuration
-source = ./personalization.conf # For Personalization
+source = ./KeyBindings.conf # Keyboard shortcuts
+source = ./Monitors.conf # Monitor configuration
+source = ./Personalization.conf # For Personalization
 
-source = ./userprefs.conf # Your User Controls
-source = ./window.conf # Window rules
-source = ./env.conf # For Environment Variables
+source = ./Userprefs.conf # Your User Controls
+source = ./Window.conf # Window rules
+source = ./Env.conf # For Environment Variables
 
-source = ./env/nvidia.conf # Nvidia Variables
+source = ./env/Nvidia.conf # Nvidia Variables
