--- a/config/hypr/StartupApps.conf
+++ b/config/hypr/StartupApps.conf
@@ -6,5 +6,5 @@
 # Or execute your favorite apps at launch like this:
 
 exec-once = $terminal
-exec-once = swww-daemon
+# exec-once = swww-daemon
 # exec-once = nm-applet &
