--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -10,4 +10,4 @@ source = ./Userprefs.conf # Your User Controls
 source = ./Window.conf # Window rules
 source = ./Env.conf # For Environment Variables
 
-source = ./Nvidia.conf # Nvidia Variables
+source = ./env/Nvidia.conf # Nvidia Variables
